fix: disabled color and spacing.

--- a/menu-app/src/app/util-components/covid-modal/covid-modal.component.scss
+++ b/menu-app/src/app/util-components/covid-modal/covid-modal.component.scss
@@ -9,6 +9,10 @@
   font-weight: 500;
 }
 
+.form-check {
+  margin-left: 10px;
+}
+
 .form-body {
   opacity: 0.75;
   border-bottom: rgba(196, 208, 217, 0.5) solid 1px;
@@ -30,14 +34,15 @@
   cursor: pointer;
 }
 
-//Change cursor icon for disbled checkboxes
-.form-check-input:disabled + label::before {
-  cursor: default;
-}
-
 //Set color for checked boxes
 .form-check-input:checked + label::before {
   background: #ee3353;
+}
+
+//Change cursor icon for disbled checkboxes
+.form-check-input:disabled + label::before {
+  cursor: default;
+  background: #000000;
 }
 
 // Add the custom checkmark
